nok-bbm/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bbm-ingress
  namespace: nok-bbm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    netopskube.io/bbm: "true"
    netopskube.io/prober: http
spec:
  ingressClassName: nginx
  rules:
  - host: portal.nok.local # kpt-set: ${ingress-host}
    http:
      paths:
      - path: /bbm(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bbm-grafana-service
            port:
              number: 80
